WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220191
Fix compile error in non libressl WinCairo
https://bugs.webkit.org/show_bug.cgi?id=220191
Summary
Fix compile error in non libressl WinCairo
Yusuke Suzuki
Reported
2020-12-29 01:53:46 PST
Fix compile error in non libressl WinCairo
Attachments
Patch
(1.51 KB, patch)
2020-12-29 01:54 PST
,
Yusuke Suzuki
don.olmstead
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-12-29 01:54:09 PST
Created
attachment 416837
[details]
Patch
EWS
Comment 2
2020-12-29 15:16:11 PST
ChangeLog entry in Source/WebCore/ChangeLog contains OOPS!.
Yusuke Suzuki
Comment 3
2020-12-29 15:19:01 PST
Committed
r271107
: <
https://trac.webkit.org/changeset/271107
>
Radar WebKit Bug Importer
Comment 4
2020-12-29 15:19:16 PST
<
rdar://problem/72729283
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug