Fix compile error in non libressl WinCairo https://bugs.webkit.org/show_bug.cgi?id=220191

Reviewed by Don Olmstead.

* platform/network/curl/CurlSSLVerifier.cpp:
(WebCore::CurlSSLVerifier::CurlSSLVerifier):

Canonical link: https://commits.webkit.org/232704@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271107 268f45cc-cd09-0410-ab3c-d52691b4dbfc